--- a/frames/gamecatalog/hives/listing/actions/home/home_view.html
+++ b/frames/gamecatalog/hives/listing/actions/home/home_view.html
@@ -5,6 +5,9 @@
     <title>GameGalaxy</title>
     <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.11/firebase.js'></script>
 
+    <%- js_model.render('head') %>
+    <%- css_model.render('head') %>
+    <script type="text/javascript" src="/js/home/vendor/require.js" data-main="js/home/home"></script>
 </head>
 <body>
 <script language="JavaScript">
