--- a/frames/gamecatalog/hives/listing/actions/home/home_view.html
+++ b/frames/gamecatalog/hives/listing/actions/home/home_view.html
@@ -3,8 +3,6 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>GameGalaxy</title>
-    <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.11/firebase.js'></script>
-
     <%- js_model.render('head') %>
     <%- css_model.render('head') %>
     <script type="text/javascript" src="/js/home/vendor/require.js" data-main="js/home/home"></script>
@@ -14,5 +12,7 @@
     var giant_bomb_api_key = '<%= gb_api_key %>';
 </script>
 <%- js_model.render('foot') %>
+<!--link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css' -->
+<link href='/css/home/roboto.css' rel='stylesheet' type='text/css' />
 </body>
 </html>
