--- a/frames/gamecatalog/hives/listing/actions/home/home_view.html
+++ b/frames/gamecatalog/hives/listing/actions/home/home_view.html
@@ -5,6 +5,7 @@
     <title>GameGalaxy</title>
     <%- js_model.render('head') %>
     <%- css_model.render('head') %>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/js/home/vendor/require.js" data-main="js/home/home"></script>
 </head>
 <body>
